name:                persona
version:             0.1.0.0
synopsis:            Persona (BrowserID) library
description:         Persona (BrowesrID) library
homepage:            https://github.com/frasertweedale/hs-persona
bug-reports:         https://github.com/frasertweedale/hs-persona/issues
license:             AGPL-3
license-file:        agpl-3.0.txt
extra-source-files:
  README.md
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2013, 2014  Fraser Tweedale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-persona.git

library
  default-language:    Haskell2010

  ghc-options:  -Werror -Wall
  hs-source-dirs: src

  build-depends:
    base == 4.*
    , aeson >= 0.7
    , network-uri >= 2.6
    , text >= 0.11
    , unordered-containers >= 0.2
    , jose >= 0.2.31.0

  exposed-modules:
    Crypto.Persona
